create classes in style.css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Потрачено</title>
 </head>
 <body>
-  <div>
+  <div class="container">
     <div>
       <h1>Учет моих расходов</h1>
         <input class="" type="text" placeholder="Куда было потрачено" id="input-shop">
