feat: create tags

--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
 </head>
 <body>
   <div class="container">
+    <h1>Учет моих расходов</h1>
     <div>
-      <h1>Учет моих расходов</h1>
         <input class="" type="text" placeholder="Куда было потрачено" id="input-shop">
         <input class="" type="text" placeholder="Сколько было потрачено" id="input-cost">
         <button class=" " type="button" onclick=" ">Добавить</button>
-        <div id=""></div>
     </div>
+    <div id=""></div>
   </div>
+  <ol class="" id="" ></ol>
 </body>
+<script src=""></script>
+<script src=""></script>
 </html>
