--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div>
         <input class="" type="text" placeholder="Куда было потрачено" id="input-shop">
         <input class="" type="text" placeholder="Сколько было потрачено" id="input-cost">
-        <button class=" " type="button" onclick=" ">Добавить</button>
+        <button class="button" type="button" onclick=" ">Добавить</button>
     </div>
     <div id=""></div>
   </div>
