feat: create tags

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <div class="container">
     <h1>Учет моих расходов</h1>
     <div>
-        <input class="" type="text" placeholder="Куда было потрачено" id="input-shop">
-        <input class="" type="text" placeholder="Сколько было потрачено" id="input-cost">
+        <input class="input" type="text" placeholder="Куда было потрачено" id="input-shop">
+        <input class="input" type="text" placeholder="Сколько было потрачено" id="input-cost">
         <button class="button" type="button" onclick=" ">Добавить</button>
     </div>
     <div id=""></div>
