--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <input class="input" type="text" placeholder="Сколько было потрачено" id="input-cost">
         <button class="button" type="button" onclick=" ">Добавить</button>
     </div>
-    <div id=""></div>
+    <div id=" "></div>
   </div>
-  <ol class="" id="" ></ol>
+  <ol class="content" id="content"></ol>
 </body>
 <script src=""></script>
 <script src=""></script>
