feat: added datein file-model

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <div>
         <input class="input" type="text" placeholder="Куда было потрачено" id="input-shop">
         <input class="input" type="text" placeholder="Сколько было потрачено" id="input-cost">
-        <button class="button" type="button" onclick=" ">Добавить</button>
+        <button class="button" type="button" onclick="addNewTask()">Добавить</button>
     </div>
     <div id=" "></div>
   </div>
   <ol class="content" id="content"></ol>
 </body>
-<script src=""></script>
-<script src=""></script>
+<script src="script.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
 </html>
