--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <h1>Учет моих расходов</h1>
     <div>
         <input class="input" type="text" placeholder="Куда было потрачено" id="input-shop">
-        <input class="input" type="text" placeholder="Сколько было потрачено" id="input-cost">
-        <button class="button" type="button" onclick="addNewTask()">Добавить</button>
+        <input class="input" type="number" placeholder="Сколько было потрачено" id="input-cost">
+        <button class="button" type="button" onclick="addNewCost()">Добавить</button>
     </div>
-    <div id=" "></div>
+    <div id="all"></div>
   </div>
-  <ol class="content" id="content"></ol>
+  <ol class="content_page" id="content"></ol>
 </body>
 <script src="script.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
